force-app/main/default/objects/CTCPG__ActivityData__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>