force-app/main/default/objects/CTCPG__ActivityData__c/fields/largeur_du_produit_en_cm__c.field-meta.xml
<CustomField>
    <fullName>largeur_du_produit_en_cm__c</fullName>
    <formula>CTCPG__ProductId__r.Largeur_du_produit_en_cm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>largeur_du_produit_en_cm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>