force-app/main/default/objects/CTCPG__ActivityData__c/fields/largeur_du_produit_en_cm_facing__c.field-meta.xml
<CustomField>
    <fullName>largeur_du_produit_en_cm_facing__c</fullName>
    <formula>largeur_du_produit_en_cm__c  *  Facing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>largeur_du_produit_en_cm+facing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>