force-app/main/default/objects/CTCPG__ActivityData__c/fields/largeur_du_produit_en_cm_num__c.field-meta.xml
<CustomField>
    <fullName>largeur_du_produit_en_cm_num__c</fullName>
    <label>largeur_du_produit_en_cm_num</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>