force-app/main/default/objects/CTCPG__ActivityData__c/fields/Obligatory__c.field-meta.xml
<CustomField>
    <fullName>Obligatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligatory</label>
    <type>Checkbox</type>
</CustomField>