force-app/main/default/objects/CTCPG__ActivityData__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>ctmobile.quantity(1)</description>
    <inlineHelpText>Field to be shown with +/- buttons in CT mobile. For demonstration purposes only.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>