force-app/main/default/objects/CTCPG__ActivityData__c/fields/ShelfLength__c.field-meta.xml
<CustomField>
    <fullName>ShelfLength__c</fullName>
	<label>Shelf Length</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Number</type>
</CustomField>